--- a/tickets/package.json
+++ b/tickets/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tickets",
   "version": "1.0.0",
-  "description": "",
+  "description": "Tickets service",
   "main": "index.js",
   "scripts": {
     "start": "ts-node-dev src/index.ts",
