--- a/orders/package.json
+++ b/orders/package.json
@@ -1,7 +1,7 @@
 {
   "name": "orders",
   "version": "1.0.0",
-  "description": "Orders",
+  "description": "Order",
   "main": "index.js",
   "scripts": {
     "start": "ts-node-dev src/index.ts",
