--- a/.github/workflows/deploy-auth.yaml
+++ b/.github/workflows/deploy-auth.yaml
@@ -2,25 +2,18 @@ name: deploy-auth
 
 on:
   push:
-    branches: 
+    branches:
       - main
     paths:
-      - 'auth/**'
-
+      - "auth/**"
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-
-      - name: Build Docker image
-        run: cd auth && docker build -t purthas/auths .
-
-      - name: Log in to Docker Hub
+      - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        run: echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
-
-      - name: Push Docker image
-        run: docker push purthas/auths
+      - run: cd auth && docker build -t purthas/auth .
+      - run: docker push purthas/auth
