--- a/.github/workflows/deploy-auth.yaml
+++ b/.github/workflows/deploy-auth.yaml
@@ -6,14 +6,21 @@ on:
       - main
     paths:
       - "auth/**"
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
+      - name: Log in to Docker Hub
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-      - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-      - run: cd auth && docker build -t purthas/auth .
-      - run: docker push purthas/auth
+        run: echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
+
+      - name: Build Docker image
+        run: cd auth && docker build -t purthas/auth .
+
+      - name: Push Docker image
+        run: docker push purthas/auth
