--- a/.github/workflows/deploy-auth.yaml
+++ b/.github/workflows/deploy-auth.yaml
@@ -11,7 +11,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Check out code
+        uses: actions/checkout@v2
 
       - name: Log in to Docker Hub
         env:
@@ -20,7 +21,18 @@ jobs:
         run: echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
 
       - name: Build Docker image
-        run: cd auth && docker build -t purthas/auth .
+        run: cd auth && docker build -t purthas/auths .
 
-      - name: Push Docker image
-        run: docker push purthas/auth
+      - name: Push Docker image to Docker Hub
+        run: docker push purthas/auths
+
+      - name: Install DigitalOcean CLI
+        uses: digitalocean/action-doctl@v2
+        with:
+          token: ${{ secrets.DIGITAL_ACCESS_TOKEN }}
+
+      - name: Set up Kubernetes configuration
+        run: doctl kubernetes cluster kubeconfig save ticketing
+
+      - name: Restart Kubernetes Deployment
+        run: kubectl rollout restart deployment auth-depl
