--- a/.github/workflows/deploy-manifests.yaml
+++ b/.github/workflows/deploy-manifests.yaml
@@ -1,4 +1,4 @@
-name: deploy-manifests 
+name: deploy-manifests
 
 on:
   push:
@@ -23,4 +23,6 @@ jobs:
         run: doctl kubernetes cluster kubeconfig save ticketing
 
       - name: Apply all infra config files
-        run: kubectl apply -f infra/k8s && kubectl apply -f infra/k8s-prod
+        run: |
+          kubectl apply -f infra/k8s
+          kubectl apply -f infra/k8s-prod
