--- a/.github/workflows/deploy-manifests.yaml
+++ b/.github/workflows/deploy-manifests.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Install DigitalOcean CLI
         uses: digitalocean/action-doctl@v2
         with:
-          token: ${{ secrets.DIGITAL_ACCESS_TOKEN }}
+          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
 
       - name: Set up Kubernetes configuration
         run: doctl kubernetes cluster kubeconfig save ticketing
