--- a/infra/k8s-prod/ingress-srv.yaml
+++ b/infra/k8s-prod/ingress-srv.yaml
@@ -1,48 +1,48 @@
-# Prod Ingress
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress-srv
   annotations:
-    kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/use-regex: "true"  # Optional if you need regex paths
 spec:
+  ingressClassName: nginx  # Correct way to set the Ingress class
   rules:
-    - host: update-host-name.com
+    - host: update-host-name.com  # Replace with your valid hostname
       http:
         paths:
-          - path: /api/payments/?(.*)
+          - path: /api/payments
             pathType: Prefix
             backend:
               service:
                 name: payments-srv
                 port:
                   number: 4000
-          - path: /api/users/?(.*)
+          - path: /api/users
             pathType: Prefix
             backend:
               service:
                 name: auths-srv
                 port:
                   number: 4000
-          - path: /api/tickets/?(.*)
+          - path: /api/tickets
             pathType: Prefix
             backend:
               service:
                 name: tickets-srv
                 port:
                   number: 4000
-          - path: /api/orders/?(.*)
+          - path: /api/orders
             pathType: Prefix
             backend:
               service:
                 name: orders-srv
                 port:
                   number: 4000
-          - path: /?(.*)
+          - path: /
             pathType: Prefix
             backend:
               service:
                 name: client-srv
                 port:
                   number: 3000
+
